[package]
name = "note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
config = { version = "0.11.0", features = ["toml"] }
edit = "0.1.3"
dirs = "4.0"
tempfile = "3.3.0"